# my_libCPP

./: CMakeLists.txt  README.md  library.hpp  test.cpp
src/: Float.cpp  Float.hpp  Int.cpp  Int.hpp  Math.cpp  Math.hpp  Matrix.cpp  Matrix.hpp  String.cpp  String.hpp  Timer.cpp  Timer.hpp  Value.cpp  Value.hpp  Vector2D.cpp  Vector2D.hpp  Vector3D.cpp  Vector3D.hpp  library.hpp
